// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MobileHeader Snapshots should match snapshot with custom branding 1`] = `
<header
  class="md:hidden h-14 bg-white text-slate-900 flex items-center justify-between px-4 shrink-0 shadow-sm border-b border-slate-200 z-30"
>
  <div
    class="flex items-center gap-2"
  >
    <div
      class="w-8 h-8 rounded overflow-hidden shadow-sm"
    >
      <img
        alt="Custom Brand"
        class="w-full h-full object-cover"
        src="https://example.com/logo.png"
      />
    </div>
    <span
      class="font-bold text-sm text-slate-900"
    >
      Custom Brand
    </span>
  </div>
  <div
    class="flex items-center gap-2"
  >
    <button
      aria-label="Notifications"
      class="relative p-2 text-slate-500 hover:bg-slate-100 rounded-full transition-colors min-w-[44px] min-h-[44px] flex items-center justify-center"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-bell w-5 h-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.268 21a2 2 0 0 0 3.464 0"
        />
        <path
          d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
        />
      </svg>
      <span
        aria-label="3 unread notifications"
        class="absolute top-1.5 right-1.5 w-2 h-2 bg-red-500 rounded-full border border-white"
      />
    </button>
    <button
      aria-label="Open menu"
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 size-9 text-slate-600 hover:bg-slate-100 min-w-[44px] min-h-[44px] rounded-full"
      data-size="icon"
      data-slot="button"
      data-variant="ghost"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-menu w-5 h-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 5h16"
        />
        <path
          d="M4 12h16"
        />
        <path
          d="M4 19h16"
        />
      </svg>
    </button>
  </div>
</header>
`;

exports[`MobileHeader Snapshots should match snapshot with default props 1`] = `
<header
  class="md:hidden h-14 bg-white text-slate-900 flex items-center justify-between px-4 shrink-0 shadow-sm border-b border-slate-200 z-30"
>
  <div
    class="flex items-center gap-2"
  >
    <div
      class="bg-slate-900 p-1.5 rounded shadow-sm"
    >
      <svg
        class="h-4 w-4 text-white"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <span
      class="font-bold text-sm text-slate-900"
    >
      F&F ADMIN
    </span>
  </div>
  <div
    class="flex items-center gap-2"
  >
    <button
      aria-label="Notifications"
      class="relative p-2 text-slate-500 hover:bg-slate-100 rounded-full transition-colors min-w-[44px] min-h-[44px] flex items-center justify-center"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-bell w-5 h-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.268 21a2 2 0 0 0 3.464 0"
        />
        <path
          d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
        />
      </svg>
    </button>
    <button
      aria-label="Open menu"
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 size-9 text-slate-600 hover:bg-slate-100 min-w-[44px] min-h-[44px] rounded-full"
      data-size="icon"
      data-slot="button"
      data-variant="ghost"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-menu w-5 h-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 5h16"
        />
        <path
          d="M4 12h16"
        />
        <path
          d="M4 19h16"
        />
      </svg>
    </button>
  </div>
</header>
`;

exports[`MobileHeader Snapshots should match snapshot with notifications 1`] = `
<header
  class="md:hidden h-14 bg-white text-slate-900 flex items-center justify-between px-4 shrink-0 shadow-sm border-b border-slate-200 z-30"
>
  <div
    class="flex items-center gap-2"
  >
    <div
      class="bg-slate-900 p-1.5 rounded shadow-sm"
    >
      <svg
        class="h-4 w-4 text-white"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <span
      class="font-bold text-sm text-slate-900"
    >
      F&F ADMIN
    </span>
  </div>
  <div
    class="flex items-center gap-2"
  >
    <button
      aria-label="Notifications"
      class="relative p-2 text-slate-500 hover:bg-slate-100 rounded-full transition-colors min-w-[44px] min-h-[44px] flex items-center justify-center"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-bell w-5 h-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.268 21a2 2 0 0 0 3.464 0"
        />
        <path
          d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
        />
      </svg>
      <span
        aria-label="5 unread notifications"
        class="absolute top-1.5 right-1.5 w-2 h-2 bg-red-500 rounded-full border border-white"
      />
    </button>
    <button
      aria-label="Open menu"
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 size-9 text-slate-600 hover:bg-slate-100 min-w-[44px] min-h-[44px] rounded-full"
      data-size="icon"
      data-slot="button"
      data-variant="ghost"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-menu w-5 h-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 5h16"
        />
        <path
          d="M4 12h16"
        />
        <path
          d="M4 19h16"
        />
      </svg>
    </button>
  </div>
</header>
`;

exports[`MobileHeader Snapshots should match snapshot with zero notifications 1`] = `
<header
  class="md:hidden h-14 bg-white text-slate-900 flex items-center justify-between px-4 shrink-0 shadow-sm border-b border-slate-200 z-30"
>
  <div
    class="flex items-center gap-2"
  >
    <div
      class="bg-slate-900 p-1.5 rounded shadow-sm"
    >
      <svg
        class="h-4 w-4 text-white"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <span
      class="font-bold text-sm text-slate-900"
    >
      F&F ADMIN
    </span>
  </div>
  <div
    class="flex items-center gap-2"
  >
    <button
      aria-label="Notifications"
      class="relative p-2 text-slate-500 hover:bg-slate-100 rounded-full transition-colors min-w-[44px] min-h-[44px] flex items-center justify-center"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-bell w-5 h-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.268 21a2 2 0 0 0 3.464 0"
        />
        <path
          d="M3.262 15.326A1 1 0 0 0 4 17h16a1 1 0 0 0 .74-1.673C19.41 13.956 18 12.499 18 8A6 6 0 0 0 6 8c0 4.499-1.411 5.956-2.738 7.326"
        />
      </svg>
    </button>
    <button
      aria-label="Open menu"
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:text-accent-foreground dark:hover:bg-accent/50 size-9 text-slate-600 hover:bg-slate-100 min-w-[44px] min-h-[44px] rounded-full"
      data-size="icon"
      data-slot="button"
      data-variant="ghost"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-menu w-5 h-5"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M4 5h16"
        />
        <path
          d="M4 12h16"
        />
        <path
          d="M4 19h16"
        />
      </svg>
    </button>
  </div>
</header>
`;
